Fix spacing bugs

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -79,7 +79,7 @@
     opacity: 1;
     visibility: visible;
     transform: scale(1);
-    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition: all 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
     &.hidden {
       opacity: 0;
