--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -181,20 +181,31 @@ footer {
 
 @media screen and (max-width: 798px) {
   body {
-    margin: 10px;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+
     h2 {
       margin-bottom: 10px;
       margin-top: 0;
     }
   }
-
+  
   .resume-container {
+    padding: 10px;
     flex-direction: column;
-  }
 
-  section {
-    margin-bottom: auto;
+    .content {
+      width: 100%;
+      padding: 0;
+      
+      section {
+        margin-bottom: auto;
+        padding: 10px;
+      }
+    }
   }
+  
   .header {
     margin-top: 10px;
     position: relative;
